<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="mobile_pattern">(13\\d|14[57]|15[^4,\\D]|17[678]|18\\d)\\d{8}|170[059]\\d{7}</string>
    <string name="app_name">快递员</string>
    <string name="action_settings">Settings</string>
    <string name="logo_text">&#160;&#160;&#160;&#160;快递员&#160;&#160;&#160;&#160;</string>
    <string name="back">&#160;&#160;返回</string>
    <string name="delete">删除</string>
    <string name="select">筛选</string>
    <string name="commit">提交</string>
    <string name="certain">确定</string>
    <string name="share">分享</string>
    <string name="phone_list">通讯录</string>
    <string name="login">登录</string>
    <string name="order">订单</string>
    <string name="message">消息</string>
    <string name="more">我的</string>
    <string name="liuyan_center">留言中心</string>
    <string name="liuyan_search">搜索</string>
    <string name="start_end_time_hint">例如 2014-07-11</string>
    <string name="input_phonenumber_hint">请输入手机号</string>
    <string name="input_oddnumber_hint">请输入运单号</string>
    <string name="start_time_text">起始时间\n(必填)</string>
    <string name="end_time_text"> 截止时间</string>
    <string name="start_time_tv_tag">*</string>
    <string name="regist">注册</string>
    <string name="mobile_tip">请输入手机号码</string>
    <string name="mobile_tip2">手机号仅用于账号登陆和账户保护</string>
    <string name="mobile_tip3">手机号</string>
    <string name="mobile_tip4">注册时，使用公司业务手机号更容易通过审核，订单也可以直接下达</string>
    <string name="mobile_error_tip">请输入业务手机号码</string>
    <string name="check_code_tip1">验证码</string>
    <string name="get_check_code1">获取验证码</string>
    <string name="get_check_code2">重新获取</string>
    <string name="check_code_tip2">验证码已发送至</string>
    <string name="pwd_tip">密码</string>
    <string name="pwd1_tip">6-16位字符，由数字和字母组成</string>
    <string name="pwd1_error_tip">密码长度应为6-16位</string>
    <string name="pwd2_tip">再次设置登录密码</string>
    <string name="pwd2_error_tip">密码不一致</string>
    <string name="next">下一步</string>
    <string name="vetify_mobile">验证公司业务手机</string>
    <string name="vetify">验证</string>
    <string name="vetify_mobile_tip1">请输入公司手机号</string>
    <string name="vetify_mobile_tip2">输入公司业务手机号用于审核您的业务员身份</string>
    <string name="vetify_mobile_tip3">如果你不想验证公司手机号，请直接点击跳过</string>
    <string name="step_over">跳过></string>
    <string name="login_username">快递员</string>
    <string name="regist_account">立即注册</string>
    <string name="find_pwd">修改密码/忘记密码？</string>
    <string name="input_mobile">公司业务手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="select_expressfirm">请选择您所在的快递公司</string>
    <string name="select_area">请选择您所在的地区</string>
    <string name="select_branch">请选择你的网点名称</string>
    <string name="input_branch">请输入你的网点名称</string>
    <string name="choose_branch">选择网点</string>
    <string name="fill_name">请输入你的姓名</string>
    <string name="select_identity">请选择你的身份</string>
    <string name="input_your_identity">请输入你的身份</string>
    <string name="edit_identity">编辑身份</string>
    <string name="free_regist">免费注册&#160;></string>
    <string name="finish_regist">完成</string>
    <string name="regist_tag">资料修改后，您将重新进行审核...</string>
    <string name="business_btn_txt_yunhu">云&#160;&#160;呼</string>
    <string name="phone_record_lanjian">&#160;揽件&#160;</string>
    <string name="phone_record_paijian">&#160;派件&#160;</string>
    <string name="cloud_call_tv_title">云呼语音模板</string>
    <string name="cloud_call_tv_model_desc">什么是云呼语音</string>
    <string name="cloud_call_btn_add_model">长按添加语音模板</string>
    <string name="cloud_call_btn_add_model_up">松开录音结束</string>
    <string name="welcome">快宝感谢您的支持，我们将是您忠实的工作伴侣。</string>
    <string name="finished_order">未完成</string>
    <string name="custom_service">定制服务</string>
    <string name="sender_info">寄件人信息</string>
    <string name="sender_phone_tag">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话：</string>
    <string name="sender_name_tag">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="liuyan_detail_mobile_tag">手机号</string>
    <string name="liuyan_detail_express_no_tag">运单号</string>
    <string name="sender_phone">1580173××76</string>
    <string name="sender_address_tag">地址：</string>
    <string name="sender_address">上海市长宁区北翟路11号</string>
    <string name="ps_tag">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="ps">下午3点左右取件,加5元</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="service_accept">接受服务</string>
    <string name="service_refuse">拒绝服务</string>
    <string name="pick_info">取件服务</string>
    <string name="pick_accept">接受取件</string>
    <string name="pick_refuse">拒绝取件</string>
    <string name="msg_title">消息</string>
    <string name="circle_express">快递圈</string>
    <string name="order_time">下单时间:</string>
    <string name="order_center">订单  </string>
    <string name="order_introduce">在线下单，及时受理</string>
    <string name="issue_center">事务中心</string>
    <string name="issue_introduce">留言咨询，集中处理</string>
    <string name="qrcode_center">通知发送中心</string>
    <string name="qrcode_introduce">扫一扫快递单，免费给客户发送短信通知</string>
    <string name="message_center">留言</string>
    <string name="complain_center">投诉</string>
    <string name="notice_center">通知中心</string>
    <string name="notice_branch">网点通知</string>
    <string name="notice_detail">通知详情</string>
    <string name="list_des">哇喔,么有找到！</string>
    <string name="invite_colleague">&#160;&#160;邀请同事</string>
    <string name="sms">短信</string>
    <string name="qq">QQ好友</string>
    <string name="weixin">微信</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="sms_invite_title">邀请好友</string>
    <string name="select_all">&#160;全选&#160;</string>
    <string name="finish">&#160;完成&#160;</string>
    <string name="phone_no_tag">手机号：</string>
    <string name="phone_num">手机</string>
    <string name="input_deliver_no">完成取件</string>
    <string name="liuyan_detail_btn">运单跟踪</string>
    <string name="reply_customer">回复客户</string>
    <string name="reply_server">回复客服</string>
    <string name="fast_reply">快捷回复</string>
    <string name="record">按住说话</string>
    <string name="reply_banch">给网点回复</string>
    <string name="selection">已选择0个</string>
    <string name="adddeliverno">添加运单号</string>
    <string name="notice_user">免费通知客户</string>
    <string name="deliver_no_tag">运单号：</string>
    <string name="deliver_info">运单详情 </string>
    <string name="track_info">运单跟踪 </string>
    <string name="new_tag">new</string>
    <string name="mannul_input_deliver_no">请输入编号或运单号</string>
    <string name="liuyan_detail">留言详情</string>
    <string name="exception_detail">异常详情</string>
    <string name="complain_detail">投诉详情</string>
    <string name="choose_model">选择模板</string>
    <string name="limit_model">最多支持10条模板</string>
    <string name="add_model">添加模板</string>
    <string name="paijian_model_operate">我的模板</string>
    <string name="paijian_model_edit">编辑</string>
    <string name="message_order_desc">亲爱的快递员你还没有通过审核哦~</string>
    <string name="message_order_explain">请直接找你的网点：</string>
    <string name="message_order_help">审核帮助</string>
    <string name="network_no">网络信号不好，无法打开页面</string>
    <string name="network_no_">● 网络信号弱、不稳定或服务器故障</string>
    <string name="network_no_add">重新加载</string>
    <string name="check_text">审核帮助</string>
    <string name="page_up">上一页</string>
    <string name="page_down">下一页</string>
    <string name="nofinish">未完成</string>
    <string name="isfinish">已完成</string>
    <string name="all">全&#160;&#160;&#160;&#160;部</string>
    <string name="status_sent">已发送</string>
    <string name="status_get">已收到</string>
    <string name="status_seen">已查看</string>
    <string name="status_replied">已回复</string>
    <string name="status_unsignin">未签收</string>
    <string name="status_send_failed">失败</string>
    <string name="status_all">全部</string>
    <string name="notify_change">点击选择短信模板</string>
    <string name="lycenter_search_by_all">全&#160;&#160;&#160;&#160;部</string>
    <string name="lycenter_search_by_time">按时间</string>
    <string name="lycenter_search_by_phone">按手机</string>
    <string name="lycenter_search_by_odd_numbers">按号码</string>
    <string name="lycenter_search_by_unread">未&#160;&#160;&#160;&#160;读</string>
    <string name="recordsave">保&#160;&#160;&#160;&#160;存</string>
    <string name="scan_desc">请将红线对准快递 运单上的条形码</string>
    <string name="scan_open">打开闪光灯</string>
    <string name="scan_off">关闭闪光灯</string>
    <string name="mannul_input">&#160;&#160;手动输入</string>
    <string name="by_time_search">按时间搜索</string>
    <string name="by_phone_search">按手机搜索</string>
    <string name="by_odd_number_search">请输入编号或运单号</string>
    <string name="by_number_search">按号码搜索</string>
    <string name="qrcode_history">扫描记录</string>
    <string name="about_alarm">巴枪上传提醒</string>
    <string name="about_alarm_detal">巴枪上传提醒功能，用于提醒快递员保存的扫描数据上传到E3或站点系统中，保证签收率。\n提醒时间为每日18:00。如果数据上传为空，\n则不会做提醒。</string>
    <string name="notify_deliver">发送派件通知</string>
    <string name="notify_signin">发送代签收通知</string>
    <string name="notify_exception">发送问题件通知</string>
    <string name="model">我的模板</string>
    <string name="user_phone_number_input">手机号变绿直接输入下个手机号</string>
    <string name="user_phone_number_input2">请输入手机号</string>
    <string name="send">发送</string>
    <string name="save">保存</string>
    <string name="notify_des">发送前，请认真核对对方手机号</string>
    <string name="exception_1">收件地址不详</string>
    <string name="exception_2">送无人，电话联系不上</string>
    <string name="exception_3">节假日延迟派送</string>
    <string name="exception_5">超派件，客户自取</string>
    <string name="sign_1">包裹已放在门卫处，请取件</string>
    <string name="sign_2">包裹已被前台签收，请取件</string>
    <string name="sign_3">快件已被代签收，请核实</string>
    <string name="other">其他</string>
    <string name="model_size">模板最多为70个字</string>
    <string name="model_des1">请选择短信模板发送！</string>
    <string name="model_des">请输入短信内容，支持内容中插入编号，单号&#8230;</string>
    <string name="model_des2">请输入模板名称</string>
    <string name="describe_excepiton">问题件描述</string>
    <string name="describe_excepiton_tip">请在这里描述快递异常问题</string>
    <string name="no_delivery">扫一扫或输入快递单号\n可以免费发送派件通知~~</string>
    <string name="point_title">提示声明</string>
    <string name="point_state">提示声明:</string>
    <string name="state_1">小费是客户为满足个人需求所提出的,快递费以外的加价请求；</string>
    <string name="state_2">对于快递员能否满足客户提出的需求与能否拿到小费,请根据自身情况判定,如有疑问请及时联系客户进行确认；
</string>
    <string name="state_3">对于重复提交的小费记录,请结合客户的回复确认是单次加价还是累计加价,如有疑问请及时联系客户进行确认；
</string>
    <string name="state_4">对于快递员与客户之间因为小费所产生的任何纠纷,快递助手不承担任何责任。</string>
    <string name="qrcode_button1">预览二维码名片</string>
    <string name="qrcode_button1_text">二维码信息</string>
    <string name="qrcode_button2">下载高清二维码</string>
    <string name="qrcode_button3">我的服务说明</string>
    <string name="qrcode_button4">我的取派范围</string>
    <string name="auditing">审核中...</string>
    <string name="name_tag">姓名：</string>
    <string name="branch_tag">网点：</string>
    <string name="player">播放</string>
    <string name="recording_cus_phonenum">12355555555</string>
    <string name="recording_palying_duration">00 : 00 : 36</string>
    <string name="recording_date">2014-09-09</string>
    <string name="recording_duration">00 : 36</string>
    <string name="center">中间</string>
    <string name="not_name">暂无姓名显示</string>
    <string name="not_point">暂无网点显示</string>
    <string name="upload_e3">审核E3信息请上传以下信息</string>
    <string name="login_baqiang">1、巴枪已登录界面</string>
    <string name="paijian_no">2、5个自己的派件单号</string>
    <string name="shenhe">审核E3个人信息</string>
    <string name="tiqu_info">我们将提取你的E3系统个人信息</string>
    <string name="not_info">因为没有E3系统个人信息而导致使用扫签收、扫揽件、扫派件、问题件功能上传失败或影响业务数据，请快递员自行负责！</string>
    <string name="upload_info">审核E3信息请上传以下信息:</string>
    <string name="login_surface">1.巴枪已登陆界面;</string>
    <string name="five_point">2.5个自己的派件单号.</string>
    <string name="check_state">请在24h后查看你的E3信息审核状态</string>
</resources>