<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
       android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/call_recording_item_liuyan_shape"
         >
    <TextView 
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:id="@+id/playorpause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textColor="@color/text_black"
        />
	<LinearLayout 
	    android:layout_marginLeft="20dp"
	    android:layout_centerVertical="true"
	    android:layout_toRightOf="@id/playorpause"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <TextView
	        android:id="@+id/recording_cus_phonenum" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/recording_cus_phonenum"
	        android:textColor="@color/text_item_phone"
	        />
	    <TextView
	        
	        android:id="@+id/recording_palying_duration"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/recording_palying_duration"
	        android:textColor="@color/text_item_phone"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_marginRight="15dp"
	    android:layout_centerVertical="true"
	    android:layout_alignParentRight="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <TextView
	        android:id="@+id/recording_date" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/recording_date"
	        android:textColor="@color/text_item_phone"
	        />
	    <TextView
	        android:id="@+id/recording_duration"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/recording_duration"
	        android:textColor="@color/text_item_phone"
	        />
	</LinearLayout>
	</RelativeLayout>
</RelativeLayout>
