<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/invite_act_bg"
        android:orientation="vertical"
        android:id="@+id/ll_invite_colleague" 
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/btn_sms_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sms" 
            android:textStyle="bold"
            android:background="@drawable/selector_invite_btn"
            android:textSize="16sp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/btn_qq_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/qq"
            android:textStyle="bold" 
            android:background="@drawable/selector_invite_btn"
            android:textSize="16sp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/btn_weixin_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/weixin"
            android:textStyle="bold" 
            android:background="@drawable/selector_invite_btn"
            android:textSize="16sp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/cancel" 
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/selector_invite_cancel"
            android:textSize="16sp"
            android:padding="8dp"/>
    </LinearLayout>

</RelativeLayout>