<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_content_bg"
    android:orientation="vertical" >

    <include layout="@layout/comm_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/shape_white_with_stroke"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_tag"
                android:textColor="@color/text_gray3" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_ethreeinfo_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_name"
                    android:textColor="@color/text_black" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="5dip"
                    android:background="@color/alpha_bg" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch_tag"
                android:textColor="@color/text_gray3" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_ethreeinfo_brandname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_point"
                    android:textColor="@color/text_black" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="5dip"
                    android:background="@color/alpha_bg" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="18dip"
                android:layout_height="18dip"
                android:src="@drawable/icon_e3message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dip"
                android:text="@string/point_title"
                android:textSize="16sp"
                android:textColor="@color/text_black" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/upload_info"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/login_surface"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/five_point"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/tiqu_info"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:textSize="13sp"
            android:text="@string/not_info"
            android:textColor="@color/red" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_ethreeinfo_audit"
        android:layout_width="220dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/selector_shape_red"
        android:onClick="audit"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:visibility="gone"
        android:text="@string/shenhe"
        android:textColor="@color/white" />
    
    <LinearLayout
        android:id="@+id/ll_ethreeinfo_auditing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/shape_bottom_white_with_stroke"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:padding="20dip"
            android:src="@drawable/icon_auditing" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/auditing"
                android:textColor="@color/text_yellow"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dip"
                android:text="@string/check_state"
                android:textColor="@color/text_black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_ethreeinfo_audited"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/shape_bottom_white_with_stroke"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:padding="20dip"
            android:src="@drawable/icon_xiaolian" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/auditing"
                android:textColor="@color/text_yellow"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dip"
                android:text="@string/check_state"
                android:textColor="@color/text_black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_ethreeinfo_auditfail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/shape_bottom_white_with_stroke"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:padding="20dip"
            android:src="@drawable/icon_kulian" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/auditing"
                android:textColor="@color/text_yellow"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dip"
                android:text="@string/check_state"
                android:textColor="@color/text_black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>