<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btn_cancle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_dialog_cancle"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/cancel"
        android:textSize="16sp" />

    <View
        android:id="@+id/view0"
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/gray_4" />

    <Button
        android:id="@+id/btn_middle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_dialog_middle"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/center"
        android:textSize="16sp"
        android:visibility="gone" />

    <View
        android:id="@+id/view1"
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/gray_4"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_dialog_ok"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/certain"
        android:textSize="16sp" />

</LinearLayout>